# indicator-recipes

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: index.md
docs/assets/data/: age_stratified_example.csv  crude_rate_example.csv  small_numbers_example.csv  standard_population.csv  time_series_example.csv
docs/recipes/: age-specific-rates.md  age-standardized-rate.md  crude-rate.md  index.md  rate-ratio-difference.md  rolling-average.md
scripts/: fetch_statcan_example.py  generate_figures.py
src/indicator_recipes/: __init__.py  core.py
tests/: __init__.py  test_core.py
